Fix block overflow

--- a/style/less/kent/blocks.less
+++ b/style/less/kent/blocks.less
@@ -3,7 +3,7 @@
  */
 
 .block {
-    overflow: hidden;
+    overflow: visible;
     border: 1px solid @border-color;
     border-radius: @border-radius-base;
     padding: 0;
